hago de pswd el boton

--- a/src/test/resources/ui/index.html
+++ b/src/test/resources/ui/index.html
@@ -14,7 +14,7 @@
     </div>
     
     <div>
-      <input type="text" id="password" placeholder="contraseña" size="25" max="10">
+      <input type="password" id="password" placeholder="contraseña" size="25" max="10">
     </div>
     
     <div>
