--- a/src/test/resources/ui/index.html
+++ b/src/test/resources/ui/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>POIS</h1>
   <div>
-  	<h3> Bienvenido. Reg&iacute;strese para continuar</h3>
+  	<h3> Bienvenido. Identif&iacute;quese para continuar</h3>
    
     <div>
 	  <input class="passwd" type="text" id="username" placeholder="usuario" size="25" max="10">
