--- a/src/test/resources/ui/terminal.html
+++ b/src/test/resources/ui/terminal.html
@@ -6,7 +6,12 @@
 </head>
   	<nav class = "navbar">
      <ul class="main-menu ed-menu web-horizontal">
-		<li><a href="http://localhost:4567/">Inicio</a></li>
+       
+        <li><a href="http://localhost:4567/">Inicio</a>
+		<a href="">Administrar Poi</a>
+		<a href="">Administrar Terminales</a>
+		<a href="">Historico de Consultas</a>
+		</li>
 	</ul>
 	</nav>
 
