termino ventana pcipal adm poi

--- a/src/test/resources/ui/administrar-poi.html
+++ b/src/test/resources/ui/administrar-poi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
-  <title>POIS</title>
+  <title>Administar pois</title>
 </head>
   	<nav class = "navbar">
      <ul class="main-menu ed-menu web-horizontal">
@@ -12,7 +12,7 @@
 
    <div>    </div>
    <div>    </div>
-  <h1>ADMINISTRAR POI</h1>  
+  <h1>Administar pois</h1>  
   <body>
   
     <div>
@@ -44,7 +44,11 @@
         </table>
         </cener>
     </div>
-  
+     <div>
+        <button class="botonBuscar" value="Atras"/>Atras</button>
+        <button class="botonBuscar" value="Editar"/>Editar</button>
+        <button class="botonBuscar" value="Eliminar"/>Eliminar</button>
+    </div>
   <footer class="footer">
      <p class="text-center">
        &copy; 2016 UTN FRBA
