termino ventana de eliminar poi

--- a/src/test/resources/ui/administrar-poi.html
+++ b/src/test/resources/ui/administrar-poi.html
@@ -47,7 +47,7 @@
      <div>
         <button class="botonBuscar" value="Atras"/>Atras</button>
         <button class="botonBuscar" value="Editar"/>Editar</button>
-        <button class="botonBuscar" value="Eliminar"/>Eliminar</button>
+        <button class="botonWarning" value="Eliminar"/>Eliminar</button>
     </div>
   <footer class="footer">
      <p class="text-center">
