--- a/src/test/resources/ui/administrarPoi/administrar-poi.html
+++ b/src/test/resources/ui/administrarPoi/administrar-poi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../listado-consultas.css" media="screen" />
   <title>Administar pois</title>
 </head>
   	<nav class = "navbar">
