--- a/src/test/resources/ui/administrarPoi/editar-poi.html
+++ b/src/test/resources/ui/administrarPoi/editar-poi.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
-  <title>Administar pois</title>
+  <link rel="stylesheet" type="text/css" href="../listado-consultas.css" media="screen" />
+  <title>Editar Poi</title>
 </head>
   	<nav class = "navbar">
      <ul class="main-menu ed-menu web-horizontal">
@@ -12,7 +12,7 @@
 
    <div>    </div>
    <div>    </div>
-  <h1>Administar pois</h1>  
+  <h1>Editar Poi</h1>  
   <body>
     <div>
         <input class="filterComuna" type="text" id="textNombre" placeholder="nombre" size="25" max="10">
