--- a/src/test/resources/ui/terminal.html
+++ b/src/test/resources/ui/terminal.html
@@ -26,13 +26,13 @@
   		 <br>
   		 <br>
   		 
-  		 <table style="width:50%" id="tablaTerminales" align="center">
+  		 <table align="center">
 		  <tr>
 		    <th>Terminal</th>
 		    <th>Nombre</th>
 		  </tr>
 		  <tr>
-		    <td>50</td>
+		    <td>5</td>
 		    <td>Jill</td>
 		  </tr>
 		  <tr>
