post en login, fixes #45

--- a/src/test/resources/ui/index.html
+++ b/src/test/resources/ui/index.html
@@ -9,7 +9,7 @@
   <div>
   	<h3> Bienvenido. Identif&iacute;quese para continuar</h3>
    
-   	<form action="/perfil" method="GET">	 
+   	<form action="/perfil" method="POST">	 
      <div>
 	   <input class="passwd" type="text" name="usuario" placeholder="usuario" size="25" max="10">
    	 </div> 
