--- a/src/test/resources/ui/index.html
+++ b/src/test/resources/ui/index.html
@@ -15,7 +15,7 @@
    	 </div> 
     
      <div>
-      <input class="passwd" type="text" name="password" placeholder="contrasenia" size="25" max="10">
+      <input class="passwd" type="password" name="password" placeholder="contrasenia" size="25" max="10">
      </div>
     
      <div>
